fix: fix input overflow by setting min width to body

--- a/style.scss
+++ b/style.scss
@@ -15,6 +15,7 @@ body {
   background-color: #151515;
   height: 100vh;
   overflow-y: hidden;
+  min-width: 1366px;
 }
 
 header {
@@ -26,6 +27,7 @@ header {
 }
 
 form {
+  position: relative;
   margin: 0 20px;
   padding: 50px 25px;
   border: 5px solid rgb(36, 36, 36);
@@ -44,9 +46,10 @@ form {
   border-radius: 5px;
   cursor: pointer;
   box-shadow: 2px 2px 10px black;
-}
-.button-start:hover {
-  background-color: #838383;
+
+  &:hover {
+    background-color: #838383;
+  }
 }
 
 @for $i from 0 through 124 {
